--- a/pt_to_safetensors_converter.ipynb
+++ b/pt_to_safetensors_converter.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfKd+g256QkFilkprSwA+M",
+      "authorship_tag": "ABX9TyNOHKR3fUcOgav4VTZNYm8O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
       "cell_type": "code",
       "source": [
         "def inf(msg, style, wdth): inf = widgets.Button(description=msg, disabled=True, button_style=style, layout=widgets.Layout(min_width=wdth));display(inf)\n",
-        "file_path = \"\" #@param {type:\"string\"}pt\n",
+        "file_path = \"\" #@param {type:\"string\"}\n",
         "#@markdown - Copy and paste the path to an embedding, or a directory containing several embeddings\n",
         "#@markdown - For example: /content/gdrive/MyDrive/myembedding.pt or /content/gdrive/MyDrive/my_directory\n",
         "#@markdown - Embeddings must be in .pt format\n",
@@ -87,7 +87,7 @@
         "id": "7aLFC6c4O5EW",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -140,13 +140,13 @@
         "\n",
         "    # Save the model with the new extension\n",
         "    new_file_path = file_path.replace('.pt', '.safetensors')\n",
-        "    torch.save(s_model, new_file_path)\n"
+        "    save_file(s_model, new_file_path)\n"
       ],
       "metadata": {
         "id": "UwH1lXmGw9XP",
         "cellView": "form"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The converted safetensors embedding will be saved in the same directory as the original."
+        "The converted Safetensors embedding will be saved in the same directory as the original."
       ],
       "metadata": {
         "id": "mrV2YZ4Spde_"
