--- a/pt_to_safetensors_converter.ipynb
+++ b/pt_to_safetensors_converter.ipynb
@@ -77,11 +77,11 @@
       "source": [
         "def inf(msg, style, wdth): inf = widgets.Button(description=msg, disabled=True, button_style=style, layout=widgets.Layout(min_width=wdth));display(inf)\n",
         "file_path = \"\" #@param {type:\"string\"}\n",
-        "#@markdown - Copy and paste the path to an embedding, or a directory containing several embeddings\n",
+        "#@markdown - Copy and paste the path to a pickle file that you are converting, or a directory containing several pickle files\n",
         "#@markdown - For example: /content/gdrive/MyDrive/myembedding.pt or /content/gdrive/MyDrive/my_directory\n",
-        "#@markdown - Embeddings must be in .pt format\n",
-        "embedding_info = True #@param {type:\"boolean\"}\n",
-        "#@markdown - Check this box to get additional information about the embedding you're converting"
+        "#@markdown - Pickle files must be in .pt format\n",
+        "verbose = True #@param {type:\"boolean\"}\n",
+        "#@markdown - Check this box to get additional information about the pickle file you're converting"
       ],
       "metadata": {
         "id": "7aLFC6c4O5EW",
@@ -93,54 +93,84 @@
     {
       "cell_type": "code",
       "source": [
-        "#@title Define Converter Function\n",
+        "#@title Define Converter Functions\n",
         "import os\n",
+        "from typing import Any, Dict\n",
+        "\n",
         "import torch\n",
         "from safetensors.torch import save_file\n",
         "\n",
         "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
         "\n",
-        "def process_pt_files(path, verbose=True):\n",
+        "def process_pt_files(path: str, model_type: str, verbose=True) -> None:\n",
         "    if os.path.isdir(path):\n",
         "        # Path is a directory, process all .pt files in the directory\n",
         "        for file_name in os.listdir(path):\n",
         "            if file_name.endswith('.pt'):\n",
-        "                process_file(os.path.join(path, file_name), verbose)\n",
+        "                process_file(os.path.join(path, file_name), model_type, verbose)\n",
         "    elif os.path.isfile(path) and path.endswith('.pt'):\n",
         "        # Path is a .pt file, process this file\n",
-        "        process_file(path, verbose)\n",
+        "        process_file(path, model_type, verbose)\n",
         "    else:\n",
         "        print(f\"{path} is not a valid directory or .pt file.\")\n",
         "\n",
-        "def process_file(file_path, verbose):\n",
+        "def process_file(file_path: str, model_type: str, verbose: bool) -> None:\n",
         "    # Load the PyTorch model\n",
         "    model = torch.load(file_path, map_location=device)\n",
-        "    \n",
-        "    #Extract the embedding tensors\n",
+        "\n",
+        "    if verbose:\n",
+        "      print(file_path)\n",
+        "\n",
+        "    if model_type == 'embedding':\n",
+        "        s_model = process_embedding_file(model, verbose)\n",
+        "    elif model_type == 'vae':\n",
+        "        s_model = process_vae_file(model, verbose)\n",
+        "    else:\n",
+        "        raise Exception(f\"model_type `{model_type}` is not supported!\")\n",
+        "\n",
+        "    # Save the model with the new extension\n",
+        "    if file_path.endswith('.pt'):\n",
+        "        new_file_path = file_path[:-3] + '.safetensors'\n",
+        "    else:\n",
+        "        new_file_path = file_path + '.safetensors'\n",
+        "    save_file(s_model, new_file_path)\n",
+        "\n",
+        "def process_embedding_file(model: Dict[str, Any], verbose: bool) -> Dict[str, torch.Tensor]:\n",
+        "    # Extract the embedding tensors\n",
         "    model_tensors = model.get('string_to_param').get('*')\n",
         "    s_model = {\n",
         "          'emb_params': model_tensors\n",
         "            }\n",
-        "    \n",
-        "    if verbose:\n",
-        "      print(file_path)\n",
-        "    # Print the requested training information, if it exists\n",
-        "      if ('sd_checkpoint_name' in model) and (model['sd_checkpoint_name'] is not None):\n",
-        "            print(f\"Trained on {model['sd_checkpoint_name']}.\")\n",
-        "      else:\n",
-        "            print(\"Checkpoint name not found in the model.\")\n",
-        "        \n",
-        "      if ('step' in model) and (model['step'] is not None):\n",
-        "            print(f\"Trained for {model['step']} steps.\")\n",
-        "      else:\n",
-        "            print(\"Step not found in the model.\")\n",
-        "      # Display the tensor's shape\n",
-        "      print(f\"Dimensions of embedding tensor: {model_tensors.shape}\")\n",
-        "      print()\n",
         "\n",
-        "    # Save the model with the new extension\n",
-        "    new_file_path = file_path.replace('.pt', '.safetensors')\n",
-        "    save_file(s_model, new_file_path)\n"
+        "    if verbose:\n",
+        "        # Print the requested training information, if it exists\n",
+        "        if ('sd_checkpoint_name' in model) and (model['sd_checkpoint_name'] is not None):\n",
+        "            print(f\"Trained on {model['sd_checkpoint_name']}.\")\n",
+        "        else:\n",
+        "            print(\"Checkpoint name not found in the model.\")\n",
+        "\n",
+        "        if ('step' in model) and (model['step'] is not None):\n",
+        "            print(f\"Trained for {model['step']} steps.\")\n",
+        "        else:\n",
+        "            print(\"Step not found in the model.\")\n",
+        "        # Display the tensor's shape\n",
+        "        print(f\"Dimensions of embedding tensor: {model_tensors.shape}\")\n",
+        "        print()\n",
+        "\n",
+        "    return s_model\n",
+        "\n",
+        "def process_vae_file(model: Dict[str, Any], verbose: bool) -> Dict[str, torch.Tensor]:\n",
+        "    # Extract the state dictionary\n",
+        "    s_model = model[\"state_dict\"]\n",
+        "    if verbose:\n",
+        "        # Print the requested training information, if it exists\n",
+        "        step = model.get('step', model.get('global_step'))\n",
+        "        if step is not None:\n",
+        "            print(f\"Trained for {step} steps.\")\n",
+        "        else:\n",
+        "            print(\"Step not found in the model.\")\n",
+        "        print()\n",
+        "    return s_model"
       ],
       "metadata": {
         "id": "UwH1lXmGw9XP",
@@ -150,10 +180,23 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Convert the pickle file(s)\n",
+        "\n",
+        "Execute the respective code block according to the type of pickle files you are converting.\n",
+        "\n",
+        "The converted Safetensors will be saved in the same directory as the original."
+      ],
+      "metadata": {
+        "id": "LqEl4sM0sMPG"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#@title Convert the Embedding(s)\n",
-        "process_pt_files(file_path, verbose=embedding_info)"
+        "process_pt_files(file_path, 'embedding', verbose=verbose)"
       ],
       "metadata": {
         "cellView": "form",
@@ -163,13 +206,17 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "The converted Safetensors embedding will be saved in the same directory as the original."
+        "#@title Convert the VAE(s)\n",
+        "process_pt_files(file_path, 'vae', verbose=verbose)"
       ],
       "metadata": {
-        "id": "mrV2YZ4Spde_"
-      }
+        "cellView": "form",
+        "id": "Jil7A1ckyiHA"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
