--- a/pt_to_safetensors_converter.ipynb
+++ b/pt_to_safetensors_converter.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOHKR3fUcOgav4VTZNYm8O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,6 +12,100 @@
     },
     "language_info": {
       "name": "python"
+    },
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "a44dd6024769456a8262a17b0ce6a2ed": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ButtonModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "ButtonModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "ButtonView",
+            "button_style": "success",
+            "description": "✔ Done",
+            "disabled": true,
+            "icon": "",
+            "layout": "IPY_MODEL_49441085d85a4f219a6ccbf2a197f527",
+            "style": "IPY_MODEL_f084b7dfcae445a58d36a9c21971793c",
+            "tooltip": ""
+          }
+        },
+        "49441085d85a4f219a6ccbf2a197f527": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": "50px",
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "f084b7dfcae445a58d36a9c21971793c": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ButtonStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "ButtonStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "button_color": null,
+            "font_weight": ""
+          }
+        }
+      }
     }
   },
   "cells": [
@@ -44,7 +137,7 @@
         "drive.mount('/content/gdrive')\n",
         "\n",
         "if Shared_Drive!=\"\" and os.path.exists(\"/content/gdrive/Shareddrives\"):\n",
-        "  mainpth=\"Shareddrives/\"+Shared_Drive \n",
+        "  mainpth=\"Shareddrives/\"+Shared_Drive\n",
         "else:\n",
         "  mainpth=\"MyDrive\"\n",
         "\n",
@@ -53,21 +146,46 @@
       ],
       "metadata": {
         "id": "fCR2boKCTx0z",
-        "cellView": "form"
+        "cellView": "form",
+        "outputId": "baf6303f-9850-4dd2-a6d3-86871ac8aef5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 49,
+          "referenced_widgets": [
+            "a44dd6024769456a8262a17b0ce6a2ed",
+            "49441085d85a4f219a6ccbf2a197f527",
+            "f084b7dfcae445a58d36a9c21971793c"
+          ]
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Button(button_style='success', description='✔ Done', disabled=True, layout=Layout(min_width='50px'), style=But…"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "a44dd6024769456a8262a17b0ce6a2ed"
+            }
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
         "#@title Install Required Dependencies\n",
         "!pip install torch\n",
-        "!pip install safetensors"
+        "!pip install safetensors\n",
+        "!pip install pytorch-lightning"
       ],
       "metadata": {
-        "id": "5S88gkUJzeqG",
-        "cellView": "form"
+        "id": "5S88gkUJzeqG"
       },
       "execution_count": null,
       "outputs": []
@@ -77,11 +195,10 @@
       "source": [
         "def inf(msg, style, wdth): inf = widgets.Button(description=msg, disabled=True, button_style=style, layout=widgets.Layout(min_width=wdth));display(inf)\n",
         "file_path = \"\" #@param {type:\"string\"}\n",
-        "#@markdown - Copy and paste the path to a pickle file that you are converting, or a directory containing several pickle files\n",
+        "#@markdown - Copy and paste the path to an embedding or VAE file that you are converting, or a directory containing several files\n",
         "#@markdown - For example: /content/gdrive/MyDrive/myembedding.pt or /content/gdrive/MyDrive/my_directory\n",
         "#@markdown - Pickle files must be in .pt format\n",
-        "verbose = True #@param {type:\"boolean\"}\n",
-        "#@markdown - Check this box to get additional information about the pickle file you're converting"
+        "verbose=True"
       ],
       "metadata": {
         "id": "7aLFC6c4O5EW",
@@ -182,11 +299,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Convert the pickle file(s)\n",
+        "## Convert the file(s)\n",
         "\n",
-        "Execute the respective code block according to the type of pickle files you are converting.\n",
+        "Run whichever of the two following code blocks corresponds to the type of file you are converting.\n",
         "\n",
-        "The converted Safetensors will be saved in the same directory as the original."
+        "The converted Safetensor file will be saved in the same directory as the original."
       ],
       "metadata": {
         "id": "LqEl4sM0sMPG"
@@ -199,7 +316,6 @@
         "process_pt_files(file_path, 'embedding', verbose=verbose)"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "4LEWGfjiUeG1"
       },
       "execution_count": null,
@@ -212,7 +328,6 @@
         "process_pt_files(file_path, 'vae', verbose=verbose)"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "Jil7A1ckyiHA"
       },
       "execution_count": null,
