--- a/pt_to_safetensors_converter.ipynb
+++ b/pt_to_safetensors_converter.ipynb
@@ -158,7 +158,7 @@
           ]
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -185,7 +185,8 @@
         "!pip install pytorch-lightning"
       ],
       "metadata": {
-        "id": "5S88gkUJzeqG"
+        "id": "5S88gkUJzeqG",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -204,7 +205,7 @@
         "id": "7aLFC6c4O5EW",
         "cellView": "form"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -293,7 +294,7 @@
         "id": "UwH1lXmGw9XP",
         "cellView": "form"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -316,7 +317,8 @@
         "process_pt_files(file_path, 'embedding', verbose=verbose)"
       ],
       "metadata": {
-        "id": "4LEWGfjiUeG1"
+        "id": "4LEWGfjiUeG1",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -328,7 +330,8 @@
         "process_pt_files(file_path, 'vae', verbose=verbose)"
       ],
       "metadata": {
-        "id": "Jil7A1ckyiHA"
+        "id": "Jil7A1ckyiHA",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
